--- a/android/DatabaseTest/bin/AndroidManifest.xml
+++ b/android/DatabaseTest/bin/AndroidManifest.xml
@@ -22,6 +22,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:name="com.example.provider.DatabaseProvider"
+            android:authorities="com.example.databasetest.provider"
+            android:exported="true" >
+            
+        </provider>
     </application>
 
 </manifest>
