--- a/android/LocationTest/AndroidManifest.xml
+++ b/android/LocationTest/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:minSdkVersion="15"
         android:targetSdkVersion="21" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
