--- a/android/Qingfeng/AndroidManifest.xml
+++ b/android/Qingfeng/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:targetSdkVersion="21" />
 
     <application
+        android:name="com.intelli.qingfeng.app.util.ContextUtil"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
