--- a/android/Qingfeng/AndroidManifest.xml
+++ b/android/Qingfeng/AndroidManifest.xml
@@ -8,14 +8,16 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="21" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
-        android:name="com.intelli.qingfeng.app.util.ContextUtil"
+        android:name="com.intelli.qingfeng.util.ContextUtil"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".app.MainActivity"
+            android:name=".activity.ChooseAreaActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
