--- a/android/Qingfeng/AndroidManifest.xml
+++ b/android/Qingfeng/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <application
         android:name="com.intelli.qingfeng.util.ContextUtil"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -27,6 +27,12 @@
         </activity>
         <activity android:name="com.intelli.qingfeng.activity.WeatherActivity" >
         </activity>
+
+        <receiver android:name="com.intelli.qingfeng.receiver.AutoUpdateReceiver" >
+        </receiver>
+
+        <service android:name="com.intelli.qingfeng.service.AutoUpdateReceiver" >
+        </service>
     </application>
 
 </manifest>
