--- a/hardc/Makefile
+++ b/hardc/Makefile
@@ -1,7 +1,9 @@
 CFLAGS=-Wall -g
 
-all: ex1
+all: ex1 ex3
 ex1: ex1.c
 	cc ex1.c -o ex1 $(CFLAGS)
+ex3: ex3.c
+	cc ex3.c -o ex3 $(CFLAGS)
 clean:
-	rm -f ex1
+	rm -rf *.dSYM ex1 ex3
