--- a/hardc/Makefile
+++ b/hardc/Makefile
@@ -1,9 +1,11 @@
 CFLAGS=-Wall -g
 
-all: ex1 ex3
+all: ex1 ex3 ex7
 ex1: ex1.c
 	cc ex1.c -o ex1 $(CFLAGS)
 ex3: ex3.c
 	cc ex3.c -o ex3 $(CFLAGS)
+ex7: ex7.c
+	cc ex7.c -o ex7 $(CFLAGS)
 clean:
-	rm -rf *.dSYM ex1 ex3
+	rm -rf *.dSYM ex1 ex3 ex7
