--- a/hardc/Makefile
+++ b/hardc/Makefile
@@ -1,6 +1,6 @@
 CFLAGS=-Wall -g
 
-all: ex1 ex3 ex7 ex8
+all: ex1 ex3 ex7 ex8 ex9
 ex1: ex1.c
 	cc ex1.c -o ex1 $(CFLAGS)
 ex3: ex3.c
@@ -9,5 +9,7 @@ ex7: ex7.c
 	cc ex7.c -o ex7 $(CFLAGS)
 ex8: ex8.c
 	cc ex8.c -o ex8 $(CFLAGS)
+ex9: ex9.c
+	cc ex9.c -o ex9 $(CFLAGS)
 clean:
-	rm -rf *.dSYM ex1 ex3 ex7 ex8
+	rm -rf *.dSYM ex1 ex3 ex7 ex8 ex9
