--- a/hardc/Makefile
+++ b/hardc/Makefile
@@ -1,6 +1,6 @@
 CFLAGS=-Wall -g
 
-all: ex1 ex3 ex7 ex8 ex9
+all: ex1 ex3 ex7 ex8 ex9 ex10
 ex1: ex1.c
 	cc ex1.c -o ex1 $(CFLAGS)
 ex3: ex3.c
@@ -11,5 +11,7 @@ ex8: ex8.c
 	cc ex8.c -o ex8 $(CFLAGS)
 ex9: ex9.c
 	cc ex9.c -o ex9 $(CFLAGS)
+ex10: ex10.c
+	cc ex10.c -o ex10 $(CFLAGS)
 clean:
-	rm -rf *.dSYM ex1 ex3 ex7 ex8 ex9
+	rm -rf *.dSYM ex1 ex3 ex7 ex8 ex9 ex10
