--- a/hardc/Makefile
+++ b/hardc/Makefile
@@ -1,6 +1,6 @@
 CFLAGS=-Wall -g
 
-all: ex1 ex3 ex7 ex8 ex9 ex10 ex11
+all: ex1 ex3 ex7 ex8 ex9 ex10 ex11 ex12
 ex1: ex1.c
 	cc ex1.c -o ex1 $(CFLAGS)
 ex3: ex3.c
@@ -15,5 +15,7 @@ ex10: ex10.c
 	cc ex10.c -o ex10 $(CFLAGS)
 ex11: ex11.c
 	cc ex11.c -o ex11 $(CFLAGS)
+ex12: ex12.c
+	cc ex12.c -o ex12 $(CFLAGS)
 clean:
-	rm -rf *.dSYM ex1 ex3 ex7 ex8 ex9 ex10 ex11
+	rm -rf *.dSYM ex1 ex3 ex7 ex8 ex9 ex10 ex11 ex12
