--- a/hardc/Makefile
+++ b/hardc/Makefile
@@ -1,6 +1,7 @@
 CFLAGS=-Wall -g
 
-all: ex1 ex3 ex7 ex8 ex9 ex10 ex11 ex12
+all: ex1 ex3 ex7 ex8 ex9 ex10 \
+	ex11 ex12 ex13
 ex1: ex1.c
 	cc ex1.c -o ex1 $(CFLAGS)
 ex3: ex3.c
@@ -17,5 +18,8 @@ ex11: ex11.c
 	cc ex11.c -o ex11 $(CFLAGS)
 ex12: ex12.c
 	cc ex12.c -o ex12 $(CFLAGS)
+ex13: ex13.c
+	cc ex13.c -o ex13 $(CFLAGS)
 clean:
-	rm -rf *.dSYM ex1 ex3 ex7 ex8 ex9 ex10 ex11 ex12
+	rm -rf *.dSYM ex1 ex3 ex7 ex8 ex9 \
+		ex10 ex11 ex12 ex13
