--- a/hardc/Makefile
+++ b/hardc/Makefile
@@ -2,7 +2,7 @@ CFLAGS=-Wall -g
 
 all: ex1 ex3 ex7 ex8 ex9 ex10 \
 	ex11 ex12 ex13 ex14 ex15 \
-	ex16 ex17
+	ex16 ex17 ex18
 ex1: ex1.c
 	cc ex1.c -o ex1 $(CFLAGS)
 ex3: ex3.c
@@ -29,7 +29,9 @@ ex16: ex16.c
 	cc ex16.c -o ex16 $(CFLAGS)
 ex17: ex17.c
 	cc ex17.c -o ex17 $(CFLAGS)
+ex18: ex18.c
+	cc ex18.c -o ex18 $(CFLAGS)
 clean:
 	rm -rf *.dSYM ex1 ex3 ex7 ex8 ex9 \
 		ex10 ex11 ex12 ex13 ex14 ex15 \
-		ex16 ex17
+		ex16 ex17 ex18
